--- a/src/test/TurtleRoute.Tests.csproj
+++ b/src/test/TurtleRoute.Tests.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>    
+    <Content Include="appsettings.development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>    
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
