--- a/tests/TurtleRoute.Tests.csproj
+++ b/tests/TurtleRoute.Tests.csproj
@@ -24,9 +24,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.8.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.8.2" />
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\core\TurtleRoute.csproj" />
+    <ProjectReference Include="..\src\TurtleRoute.csproj" />
   </ItemGroup>
 
 </Project>
