--- a/src/TurtleRoute.csproj
+++ b/src/TurtleRoute.csproj
@@ -23,4 +23,7 @@
 	<ItemGroup>		
 		<None Include="README.md" Pack="true" PackagePath="\" />		
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Journey\" />
+	</ItemGroup>
 </Project>
