--- a/src/TurtleRoute.csproj
+++ b/src/TurtleRoute.csproj
@@ -8,20 +8,16 @@
 		<Description>Route and travel time calculator</Description>
 		<PackageProjectUrl>https://github.com/dimesoftware/maps</PackageProjectUrl>
 		<PackageIconUrl>https://cdn.dime-software.com/dime-software/logo-shape.png</PackageIconUrl>
-		<Version>0.14.0</Version>
+		<Version>0.15.0</Version>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IncludeSymbols>true</IncludeSymbols>
 		<NeutralLanguage>en</NeutralLanguage>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/dimesoftware/turtleroute</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 
-	<ItemGroup>
-	  <Compile Remove="Journey\**" />
-	  <EmbeddedResource Remove="Journey\**" />
-	  <None Remove="Journey\**" />
-	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Azure.Maps.Routing" Version="1.0.0-beta.4" />
 		<PackageReference Include="Azure.Maps.Search" Version="2.0.0-beta.5" />
