--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 **/obj
 *.vs
 NuGet.config
-appsettings.development.json
+**/appsettings.development.json
 **/*.coverage
+node_modules
+/tests/appsettings.development.json
